<resources>
    <string name="app_name">SimbirSoft</string>
    <string name="not_all_fields_are_filled">Не все поля заполнены</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="use_sotial_network">Использовать соцсети</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="authorisation">Авторизация</string>
    <string name="enter">Вход</string>
    <string name="not_connected">Is not connected!</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat">Повторить</string>
    <string name="save">Сохранить</string>
    <string name="private_data">Личные данные</string>
    <string name="edit">Редактировать</string>
    <string name="invalid_new_password">Invalid new password</string>
    <string name="invalid_old_password">Invalid old password</string>
    <string name="invalid_phone">Invalid phone</string>
    <string name="invalid_name">Invalid name</string>
    <string name="change_photo">Сменить фотографию</string>
    <string name="change_password">Сменить пароль</string>
    <string name="gallery">Галерея</string>
    <string name="camera">Камера</string>
    <string name="data_saved">Data saved</string>
    <string name="crop">Обрезать</string>
    <string name="error">Ошибка</string>
    <string name="error_upload_avatar">Error upload avatar</string>
    <string name="completed">Completed</string>
</resources>
